@@ -276,22 +276,6 @@ name|apache
 operator|.
 name|commons
 operator|.
-name|io
-operator|.
-name|filefilter
-operator|.
-name|FileFilterUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
 name|logging
 operator|.
 name|Log
@@ -6392,11 +6376,6 @@ block|}
 block|}
 comment|/* Test case to test CheckpointSignature */
 annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"deprecation"
-argument_list|)
-annotation|@
 name|Test
 DECL|method|testCheckpointSignature ()
 specifier|public
@@ -7943,6 +7922,233 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// Next checkpoint should succeed
+name|secondary
+operator|.
+name|doCheckpoint
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|secondary
+operator|!=
+literal|null
+condition|)
+block|{
+name|secondary
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|fs
+operator|!=
+literal|null
+condition|)
+block|{
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+name|Mockito
+operator|.
+name|reset
+argument_list|(
+name|faultInjector
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Test that a fault while downloading edits the first time after the 2NN    * starts up does not prevent future checkpointing.    */
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|30000
+argument_list|)
+DECL|method|testEditFailureOnFirstCheckpoint ()
+specifier|public
+name|void
+name|testEditFailureOnFirstCheckpoint
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|SecondaryNameNode
+name|secondary
+init|=
+literal|null
+decl_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+name|FileSystem
+name|fs
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+name|numDatanodes
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|fs
+operator|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+expr_stmt|;
+name|fs
+operator|.
+name|mkdirs
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"test-file-1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Make sure the on-disk fsimage on the NN has txid> 0.
+name|FSNamesystem
+name|fsns
+init|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+decl_stmt|;
+name|fsns
+operator|.
+name|enterSafeMode
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|fsns
+operator|.
+name|saveNamespace
+argument_list|()
+expr_stmt|;
+name|fsns
+operator|.
+name|leaveSafeMode
+argument_list|()
+expr_stmt|;
+name|secondary
+operator|=
+name|startSecondaryNameNode
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+comment|// Cause edit rename to fail during next checkpoint
+name|Mockito
+operator|.
+name|doThrow
+argument_list|(
+operator|new
+name|IOException
+argument_list|(
+literal|"Injecting failure before edit rename"
+argument_list|)
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|faultInjector
+argument_list|)
+operator|.
+name|beforeEditsRename
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|secondary
+operator|.
+name|doCheckpoint
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Fault injection failed."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"Injecting failure before edit rename"
+argument_list|,
+name|ioe
+argument_list|)
+expr_stmt|;
+block|}
+name|Mockito
+operator|.
+name|reset
+argument_list|(
+name|faultInjector
+argument_list|)
+expr_stmt|;
 comment|// Next checkpoint should succeed
 name|secondary
 operator|.
@@ -9612,11 +9818,6 @@ block|}
 block|}
 comment|/**    * Test that, if a storage directory is failed when a checkpoint occurs,    * the non-failed storage directory receives the checkpoint.    */
 annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"deprecation"
-argument_list|)
-annotation|@
 name|Test
 DECL|method|testCheckpointWithFailedStorageDir ()
 specifier|public
@@ -9867,11 +10068,6 @@ expr_stmt|;
 block|}
 block|}
 comment|/**    * Test case where the NN is configured with a name-only and an edits-only    * dir, with storage-restore turned on. In this case, if the name-only dir    * disappears and comes back, a new checkpoint after it has been restored    * should function correctly.    * @throws Exception    */
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"deprecation"
-argument_list|)
 annotation|@
 name|Test
 DECL|method|testCheckpointWithSeparateDirsAfterNameFails ()
